# LR14_26

./: .gitignore  PROMPT_LOG.md  README.md  docker-compose.yml  pyproject.toml
analyzer/: arrow_client.py  kafka_consumer.py  main.py  requirements.txt
benchmark/: arrow_vs_json.py  go_vs_python.py  results.md
collector/: Dockerfile  aggregator.go  aggregator_test.go  arrow_helpers_test.go  arrow_server.go  arrow_server_test.go  collector_test.go  coordinator.go  coordinator_test.go  generator_test.go  go.mod  go.sum  kafka_producer.go  kafka_producer_test.go  main.go  metrics.go  metrics_test.go  regions.json  writer_test.go
collector_python/: main.py
dashboard/: app.py
data/kafka/: demographics_20260507_141057_380494.parquet  demographics_20260507_141101_406002.parquet  demographics_20260507_141105_431730.parquet  demographics_20260507_141109_456776.parquet  demographics_20260507_141113_484108.parquet  demographics_20260507_141117_506432.parquet  demographics_20260507_141121_539045.parquet  demographics_20260507_141125_566567.parquet  demographics_20260507_141129_589993.parquet  demographics_20260507_141133_612395.parquet  demographics_20260507_141137_633309.parquet  demographics_20260507_141141_655998.parquet  demographics_20260507_141145_680380.parquet  demographics_20260507_141149_700219.parquet  demographics_20260507_141153_723019.parquet  demographics_20260507_141157_743960.parquet  demographics_20260507_141202_324454.parquet
k8s/: deployment.yaml  etcd.yaml  hpa.yaml  servicemonitor.yaml
tests/: conftest.py  test_analyzer.py  test_collector_python.py  test_dashboard.py  test_kafka_consumer.py
validator/: Cargo.toml  pyproject.toml
validator/src/: lib.rs
