[package]
name = "demographics_validator"
version = "0.1.0"
edition = "2021"
authors = ["cakeasaur"]
description = "Rust-валидатор демографических записей с экспортом в Python через PyO3"

[lib]
name = "demographics_validator"
# rlib нужен чтобы `cargo test` мог линковать наш крейт.
# cdylib используется для maturin-сборки в .pyd/.so.
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
# Под default-фичей собирается production extension-module; тесты запускаются
# с --no-default-features --features=test-mode для inline-Python.
extension-module = ["pyo3/extension-module"]
test-mode = ["pyo3/auto-initialize"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py39"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
